Addition of function to display ToDoLists on the screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="clear">クリア</string>
     <string name="title_hint">こんにちは</string>
     <string name="note_hint">これはテストです。</string>
+    <string name="todolist">ToDoLists</string>
 </resources>
