--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_hint">こんにちは</string>
     <string name="note_hint">これはテストです。</string>
     <string name="todolist">ToDoLists</string>
+    <string name="delete">削除する</string>
 </resources>
